--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body>
   <main>
     <h1>Hello JavaScript App</h1>
-    <p>Loading content from the API: <b id="name">....</b></p>
+    <p>Loading content from the API: <b id="name"></b></p>
   </main>
 </body>
 <script>
